<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geodat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Titulo">CONTROL Y CERTIFICACIÓN</string>
    <string name="NroEquipo">Nro Equipo</string>
    <string name="NroForm">Nro Formulario</string>
    <string name="Fecha">Fecha</string>
    <string name="Verificacion">Verificacion</string>
    <string name="GrupDet">Grupo Detenido</string>
    <string name="NivelAceite">Nivel de aceite</string>
    <string name="GrupoMarcha">Grupo en marcha</string>
    <string name="GrupMarcCarga">Grupo marcha carga</string>
    <string name="OkReal">OK/Realizado</string>
    <string name="NoOK">No OK</string>
    <string name="Subsanada">Subsanada</string>
    <string name="EstBatArranque">Estado bateria de arranque</string>
    <string name="Arranque">Arranque</string>
    <string name="Parada">Parada</string>
    <string name="TransGrup">Transferencia a grupo/s</string>
    <string name="TransRed">Transferencia a red</string>
    <string name="EstTorre">Estado torre enfriamiento</string>
    <string name="BombasRecic">Bombas recirculadoras de agua dura</string>
    <string name="NivInter">Nivel intercambiador de calor agua blanda</string>
    <string name="NivelAgua">Nivel agua blanda radiador</string>
    <string name="PerdFlui">Perdidas de Fluidos</string>
    <string name="EstCan">Estado cañerias Gas Oil</string>
    <string name="Estcana">Estado cañerias agua</string>
    <string name="Estcor">Estado correas</string>
    <string name="Frecuencia">Frecuencia</string>
    <string name="Tensiones">Tensiones</string>
    <string name="PresAc">Presion de aceite</string>
    <string name="Temperaturas">Temperaturas</string>
    <string name="CombRes">Combustible reserva</string>
    <string name="Sincro">Sincronismo</string>
    <string name="Tomarcor">Tomar corriente con carga</string>
    <string name="EstCanEs">Estado cañerias escape</string>
    <string name="PerdGas">Perdidas de gases escape</string>
    <string name="ParEmer">Parada de emergencia</string>
    <string name="LimpGen">Limpieza general de maquina</string>
    <string name="EstCond">Estado de conductores electricos</string>
    <string name="EstTan">Estado tanque combustible</string>
    <string name="EstBomRec">Estado bomba de recarga combustible</string>
    <string name="PrueInter">Prueba de intercambiador</string>
    <string name="EstAcop">Estado acoplamientos de agua</string>
    <string name="EstAcopG">Estado acoplamiento de Gas Oil</string>
    <string name="EstAcopA">Estado acoplamientos de agua</string>
    <string name="Guardar">Guardar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="Enviar">Enviar</string>
    <string name="Latitud">Latitud</string>
    <string name="Longitud">Longitud</string>
    <string name="titulo">Titulo</string>
    <string name="noArchivos">No se encontgraron archivos</string>
    <string name="locacion">Locación</string>
    <string name="checklist">Checklist de Certificación trabajos</string>
    <string name="estado">Estado</string>
    <string name="imagen">Imagen</string>
    <string name="Valoracion">Valoración</string>
    <string name="Observaciones">Observaciones</string>
    <string name="Config">Configuración</string>
    <string name="Proyecto">Proyecto</string>
    <string name="Certificacion">Certificación</string>
    <string name="Certificador">Certificador</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="BuenEstado">¿Buen estado?</string>
    <string name="BuenaCalidad">¿Buena calidad?</string>
    <string name="Roturas">¿Roturas?</string>
    <string name="AlgunProblema">¿Algún problema?</string>
    <string name="Comentarios">Comentarios</string>
    <string name="Grabar">Grabar</string>
    <string name="Play">Play</string>
    <string name="Borrar">Borrar</string>
    <string name="Grabacion">Grabación</string>
    <string name="chkcert">CHECKLIST TRABAJOS</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Cuenta">Cuenta</string>
    <string name="Clave">Clave</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Salir">Salir</string>
    <string name="cuenta">Cuenta</string>
    <string name="cargarProyectos">Cargar Proyectos</string>
    <string name="usuario">Usuario</string>
    <string name="pregunta1">Pregunta 1</string>
    <string name="resppos">Respuesta posible: si/no</string>
    <string name="pregunta2">Pregunta 2</string>
    <string name="pregunta3">Pregunta 3</string>
    <string name="pregunta4">Pregunta 4</string>
    <string name="pregunta5">Pregunta 5</string>
    <string name="resppos2">Respuesta posible: número</string>
    <string name="check">Checklist</string>
    <string name="nomproy">Nombre del proyecto</string>
    <string name="cliente">Cliente</string>
    <string name="agente">Agente</string>
    <string name="subiendo">Subiendo el archivo, espere por favor...</string>
    <string name="Ref">Ref</string>
    <string name="Referencia">Referencia</string>
    <string name="cuentaMulti">Cuenta Multiple</string>
    <string name="mapa">Mapa</string>
    <string name="Referencia2">Referencia 2</string>
    <string name="IdPunto">Id Punto</string>
    <string name="actualizar">Actualizar</string>
    <string name="nombre_app">GEODAT</string>
    <string name="leerQr">Resultado lectura código de barras o QR</string>
    <string name="qr">QR</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="no_usuario">NO ES USUARIO</string>
    <string name="suscribir">SUSCRIBIR</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="logout_confirmacion">¿Desea desconectarse de Geodat?</string>

    <string name="new_user_title">Hola y gracias por descargar GEODAT!</string>
    <string name="new_user_button">Registrar</string>
    <string name="new_user_text">"Al parecer no está vinculado a una cuenta en este momento. Para poder acceder a una cuenta GRATUITA de prueba y comenzar a usar el servicio por favor registrese. Si ya se registro, por favor ingrese por primera y única vez su “# de ID” asignado. Gracias!</string>
    <string name="register_url">https://geodat.app/activacionnuevacuenta.html</string>

    <string name="no_network_title">No hay conexión en este momento</string>
    <string name="no_network_button">CONTINUAR SIN CONEXIÓN</string>
    <string name="no_network_text">"Si ya está registrado y desea recolectar datos sin conexión proceda y luego podrá enviar los mismos cuando tenga conectividad nuevamente. Para registrarse por primera vez debe tener conexión.</string>
    <string name="id_placeholder">"Ingresar ID Geodat"</string>
    <string name="shared_pref_geodat">""com.geodat.geodat.preferences""</string>
    <string name="user_id">"user_id"</string>
    <string name="channel_description">Geodat Notification Channel</string>
</resources>
